k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: circuitops
  labels:
    app.kubernetes.io/name: circuitops-marketplace
    app.kubernetes.io/managed-by: kubectl
    environment: production
