k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: circuitops-mysql-svc
  namespace: circuitops
  labels:
    app.kubernetes.io/name: circuitops-marketplace
    app.kubernetes.io/component: database
spec:
  selector:
    app: circuitops-mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
      protocol: TCP
  type: ClusterIP       

---
apiVersion: v1
kind: Service
metadata:
  name: circuitops-backend-svc
  namespace: circuitops
  labels:
    app.kubernetes.io/name: circuitops-marketplace
    app.kubernetes.io/component: backend
spec:
  selector:
    app: circuitops-backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP        
---
apiVersion: v1
kind: Service
metadata:
  name: circuitops-frontend-svc
  namespace: circuitops
  labels:
    app.kubernetes.io/name: circuitops-marketplace
    app.kubernetes.io/component: frontend
spec:
  selector:
    app: circuitops-frontend
  ports:
    - name: http
      port: 5173
      targetPort: 5173
      protocol: TCP
  type: ClusterIP
